--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Slack notify
         uses: sushmithaeshwar/composite-gha-action@v1
         with:
-          channel-id: 'gha'
+          channel-id: gha
           slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }}
