run the step always

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,6 +18,7 @@ jobs:
           
       - name: Slack notify
         uses: sushmithaeshwar/composite-gha-action@v1
+        if: always()
         with:
           channel-id: gha
           slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }}
