--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,4 +26,6 @@ jobs:
        with:
          channel-id: gha
          slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }} 
-          
+     - uses: martialonline/workflow-status@v2
+       id: check
+     - run: echo ${{ steps.check.outputs.status }}
